--- a/style.css
+++ b/style.css
@@ -1,18 +1,18 @@
-big {
- color:white;
-  background-color:black;
-}
-body{
-  background-color:#59e5fa;
-}
 h1{
+  text-align:left;
+  text-decoration:underline;
+}
+u{
+  color:#1000ea;
+}
+p{
+  text-align:left;
+}
+h2{
+  text-align: left;
+  text-decoration: underline;
+}
+h3{
   text-align:center;
-}
-h1{
-  text-align: center;
-  text-decoration: underline;
-}
-h2 {
-  text-align: center;
-  text-decoration: underline;
+  color:blue;
 }
