--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
 h1{
-  text-align:left;
-  text-decoration:underline;
-  font-family:Sans-serif;
+  text-align:center;
+  font-family:Sans-Serif;
+  border:2px solid black;
+  background-color:white;
+  padding-top:2px;
+  padding-bottom:2px;
 }
 u{
   color:#1000ea;
@@ -11,16 +14,23 @@ p{
   font-family:Serif;
 }
 h2{
-  text-align: left;
-  text-decoration: underline;
-  font-family:Sans-serif;
+  text-align: center;
+  border:2px solid black;
+  font-family:sans-serif;
+  background-color:white;
+  padding-top:2px;
+  padding-bottom:2px;
 }
 h3{
   text-align:center;
   color:blue;
-  text-decoration: black underline;
-  font-family:Sans-serif;
+  text-decoration:black underline;
+  font-family:Sans-Serif;
+  background-color:white;
+  border:2px solid black;
+  padding-top:2px;
+  padding-bottom:2px;
 }
 body{
-  background-color:#ADD8E6;
+  background-color:white;
 }
