--- a/style.css
+++ b/style.css
@@ -1,3 +1,53 @@
+.box {
+  width:270px;
+  height:80px;
+  background-color:#969494;
+  border:2px solid black;
+  margin:50px;
+  margin-top: 30px;
+  border-radius:15px;
+  
+}
+button{
+  width:90px;
+  height:90px;
+  font-family:Sans-serif;
+  font-size:45px;
+  background-color:#969494;
+  margin-bottom:3px;
+  margin-top:0.3px;
+  border-radius:15px;
+  
+}
+p{
+  margin-left:49px;
+  margin-bottom:80px;
+}
+.boxes{
+  width:376px;
+  height:655px;
+  border:2px solid white;
+  margin:50px;
+  margin-top: 5px;
+  padding-right:0px;
+  margin-left:1px;
+  background-color:;
+  border-radius:15px;
+  background-color: white;
+  
+}
+h5{
+
+  font-family: serif;
+   text-align:center;
+  border:2px solid white;
+  border-radius:15px;
+  color:white;
+}
+body{
+  background-color:black;
+}
+
 
 h1{
   text-align:center;
